feat: add support of JSON configs

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = spark
-spark_SOURCES = main.c on_ready_event.c commands.c
+spark_SOURCES = spark.c on_ready_event.c commands.c json_config.c
 spark_LDFLAGS = -pthread
-spark_LDADD = -lpthread -ldiscord -lcurl
+spark_LDADD = -lpthread -ljson-c -ldiscord -lcurl
 spark_CPPFLAGS = -I$(top_srcdir)/include
