--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
-bin_PROGRAMS = spark
-spark_SOURCES = spark.c on_ready_event.c commands.c json_config.c
-spark_LDFLAGS = -pthread
-spark_LDADD = -lpthread -ljson-c -ldiscord -lcurl
-spark_CPPFLAGS = -I$(top_srcdir)/include
+bin_PROGRAMS = light
+light_SOURCES = light.c on_ready_event.c commands.c json_config.c
+light_LDFLAGS = -pthread
+light_LDADD = -lpthread -ljson-c -ldiscord -lcurl
+AM_CPPFLAGS = -I$(top_srcdir)/include
