--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = light
-light_SOURCES = light.c on_ready_event.c commands.c json_config.c
+light_SOURCES = light.c on_ready_event.c commands.c json_config.c common.c shortcuts.c
 light_LDFLAGS = -pthread
 light_LDADD = -lpthread -ljson-c -ldiscord -lcurl
 AM_CPPFLAGS = -I$(top_srcdir)/include
