--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install Curl
+    - name: Install curl
       run: sudo apt-get install curl libcurl4-openssl-dev
     - name: concord
       run: git clone https://github.com/Cogmasters/concord && cd concord && PREFIX=$HOME/.concord make && PREFIX=$HOME/.concord make install
     - name: configure
       run: chmod 755 ./configure && ./configure
     - name: make
-      run: LDFLAFS=-L${HOME}/.concord/usr/local/lib CXXFLAGS=-I${HOME}/.concord/usr/local/include make
+      run: export LDFLAFS=-L${HOME}/.concord/usr/local/lib && export CXXFLAGS=-I${HOME}/.concord/usr/local/include && make
     - name: make check
       run: make check
     - name: make distcheck
