--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ jobs:
     - name: Install curl
       run: sudo apt-get install curl libcurl4-openssl-dev
     - name: concord
-      run: git clone https://github.com/Cogmasters/concord && cd concord && PREFIX=$HOME/.concord make && PREFIX=$HOME/.concord make install
+      run: git clone https://github.com/Cogmasters/concord && cd concord && make && sudo make install
     - name: configure
       run: chmod 755 ./configure && ./configure
     - name: make
-      run: export LDFLAFS=-L${HOME}/.concord/usr/local/lib && export CXXFLAGS=-I${HOME}/.concord/usr/local/include && make
+      run: make
     - name: make check
       run: make check
     - name: make distcheck
