--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install curl
-      run: sudo apt-get install curl libcurl4-openssl-dev
-    - name: concord
+    - name: Install Dependencies
+      run: sudo apt-get install curl libcurl4-openssl-dev libjson-c-dev
+    - name: Install concord
       run: git clone https://github.com/Cogmasters/concord && cd concord && make && sudo make install
     - name: configure
       run: chmod 755 ./configure && ./configure
