--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,4 +2,4 @@ bin_PROGRAMS = light
 light_SOURCES = light.c on_ready_event.c commands.c json_config.c common.c shortcuts.c
 light_LDFLAGS = -pthread
 light_LDADD = -lpthread -ljson-c -ldiscord -lcurl
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I../include
