--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,6 @@
-# Editor and IDE config
-.idea/
-.vscode/
-
-# Environment secrets
+concord/
 .env
-
-# Build files
-autom4te.cache/
-cmake-build-debug/
-**/.deps
-stamp-h1
-config.status
-config.h
-CMakeLists.txt
-Makefile
-installation/
-*.log
-
-# Executables, shared/static object files
-*.exe
+json-c/
+json-c-build/
 *.o
-*.so
-*.a
-*.stackdump
-
-etc/
-database.db
+main
