--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,16 +13,7 @@ jobs:
       run: sudo apt-get install curl libcurl4-openssl-dev libjson-c-dev cmake
     - name: Install concord
       run: git clone https://github.com/Cogmasters/concord && cd concord && make && sudo make install && cd ..
-    # - name: configure
-    #   run: chmod 755 ./configure && ./configure
-    # - name: make
-    #   run: make
-    # - name: make check
-    #   run: make check
-    # - name: make distcheck
-    #   run: make distcheck
     - name: Install json-c
       run: git clone https://github.com/json-c/json-c && cd json-c && mkdir json-c-build; cd json-c-build; cmake ..; make && sudo make install && cd ../..
-    # - name: configure
     - name: Build
-      run: make
+      run: ./configure; make; sudo make install; make distcheck
