--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AC_INIT([LightBot], [0.0.1], [support@onesoftnet.eu.org], [light], [https://gith
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_SRCDIR([src/commands.c])
 AC_CONFIG_HEADERS([config.h])
-AM_INIT_AUTOMAKE([-Wall])
+AM_INIT_AUTOMAKE([foreign])
 AM_SILENT_RULES([yes])
 
 # Checks for programs.
