perf(setstatus): do not modify the suggestion if the statuses are same

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "prettier.enable": false,
   "files.associations": {
     "stdlib.h": "c",
-    "types.h": "c"
+    "types.h": "c",
+    "config.h": "c"
   }
 }
