--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "files.associations": {
     "stdlib.h": "c",
     "types.h": "c",
-    "config.h": "c"
+    "config.h": "c",
+    "common.h": "c"
   }
 }
